# AetherLink

./: README.md
AetherLink/: package-lock.json  package.json  vite.config.ts
AetherLink/src/: App.vue
AetherLink/src-tauri/: Cargo.toml  tauri.conf.json
AetherLink/src-tauri/icons/: icon.icns
AetherLink/src-tauri/src/: auth.rs  beacon.rs  lib.rs  main.rs  protocol.rs  server.rs  startup.rs  state.rs
AetherLink/src-tauri/src/modes/: automation.rs  mod.rs  profiles.rs  safe.rs  shell.rs
AetherLink/src/assets/: navigation.css  style.css  tasks.css
AetherLink/src/components/: Logs.vue  Navigation.vue
AetherLink/src/composables/: useAetherLink.ts  useDeviceManager.ts  useLogger.ts  useProfileManager.ts  useQRPairing.ts  useStartUp.ts
AetherLink/src/views/: HomePage.vue  TasksPage.vue
AetherLinkPhone/: .gitignore  index.html  package-lock.json  package.json
AetherLinkPhone/go/client/: go.sum  main.go  shutdown-server
AetherLinkPhone/go/server/: go.mod  main.go
AetherLinkPhone/src/: App.css  App.tsx  App.vue  main.ts  vite-env.d.ts
AetherLinkPhone/src-tauri/: 2  Cargo.toml  package-lock.json  package.json  tauri.conf.json
AetherLinkPhone/src-tauri/capabilities/: default.json  mobile.json
AetherLinkPhone/src-tauri/src/: beacon.rs  connection.rs  keypair.rs  lib.rs  main.rs  protocol.rs
AetherLinkPhone/src/composables/: useAetherLink.ts
AetherLinkPhone/src/styles/: main.css
AetherLinkPhone/src/views/: Authorization.vue  MainPage.vue
aetherlink-common/: Cargo.toml
aetherlink-common/src/: beacon.rs  crypto.rs  lib.rs  protocol.rs
aetherlink-pc/: package.json
aetherlink-pc/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
aetherlink-pc/src-tauri/src/: auth.rs  lib.rs  server.rs  startup.rs  state.rs  tray.rs
aetherlink-pc/src/assets/: navigation.css  tasks.css
aetherlink-pc/src/components/: Logs.vue  Navigation.vue
aetherlink-pc/src/composables/: useDeviceManager.ts  useLogger.ts  useQRPairing.ts  useStartUp.ts
aetherlink-pc/src/router/: index.ts
aetherlink-pc/src/views/: HomePage.vue  TasksPage.vue
aetherlink-phone/: .gitignore  package-lock.json  package.json  vite.config.ts
aetherlink-phone/src/: App.css  App.vue  main.ts
aetherlink-phone/src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
aetherlink-phone/src-tauri/capabilities/: default.json  mobile.json
aetherlink-phone/src-tauri/icons/: icon.icns
aetherlink-phone/src-tauri/src/: connection.rs  keypair.rs  lib.rs  servers.rs
aetherlink-phone/src/composables/: api.ts  store.ts  types.ts  useAetherLink.ts  useNotification.ts  useThemeCustomizer.ts
aetherlink-phone/src/router/: index.ts
aetherlink-phone/src/styles/: authorization.css  main.css
aetherlink-phone/src/views/: Authorization.vue  MainPage.vue  QrScanner.vue
(+11 files in other folders)
