[package]
name = "aetherlink"
version = "0.1.0"
description = "AetherLink - Remote PC Control"
authors = ["you"]
edition = "2021"

[lib]
name = "aetherlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Noise protocol encryption (from pc-shutdown)
snow           = "0.9"
sha2           = "0.10"

# Async runtime
tokio          = { version = "1", features = ["full"] }

# Auth / pairing
uuid           = { version = "1", features = ["v4"] }
base64         = "0.22"
rand           = "0.8"
