[package]
name = "aetherlink"
version = "0.1.0"
description = "AetherLink - Remote PC Control"
authors = ["Backend: https://github.com/r1cew", "UI: https://github.com/XtadeRe"]
edition = "2021"

[[bin]]
name = "AetherLink"
path = "src/main.rs"

[lib]
name = "aetherlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Noise protocol encryption (from pc-shutdown)
snow           = "0.9"
sha2           = "0.10"

# Async runtime
tokio          = { version = "1", features = ["full"] }

# Auth / pairing
uuid           = { version = "1", features = ["v4"] }
base64         = "0.22"
rand           = "0.8"

# startup
winreg         = "0.56.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
