[package]
name = "aetherlink-phone"
version = "0.1.0"
description = "AetherLink Phone - Remote Control Client"
authors = ["you"]
edition = "2021"

[lib]
name = "aetherlink_phone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Noise protocol (те же что на сервере)
snow           = "0.9"

# Токен / keypair
uuid           = { version = "1", features = ["v4"] }
base64         = "0.22"
rand           = "0.8"
tokio          = { version = "1", features = ["full"] }
tauri-plugin-store = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
